--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
           sudo chmod +x llvm.sh
           sudo ./llvm.sh 14 all
           sudo rm llvm.sh
+          sudo update-alternatives --install \
+            /usr/bin/llvm-config       llvm-config      /usr/bin/llvm-config-14  200 
       - name: Build
         run: |
           mkdir build
