--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           sudo rm llvm.sh
           sudo update-alternatives --install \
             /usr/bin/llvm-config       llvm-config      /usr/bin/llvm-config-14  200 
-          sudo apt-get remove llvm-12 -y
+          sudo apt-get remove llvm-12 llvm-10 -y
       - name: Build
         run: |
           mkdir build
