Add nic to compile from C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.2.0)
 project(ni VERSION 0.0.1 LANGUAGES CXX C)
 
+add_subdirectory(nic)
+
 find_package(FLEX REQUIRED)
 find_package(BISON REQUIRED)
 find_package(LLVM 14 REQUIRED CONFIG)
@@ -39,6 +41,7 @@ bison_target(parser src/parse/parser.yy "${GENERATED_DIR}/parser.tab.cc")
 include_directories(include src/include ${CMAKE_CURRENT_BINARY_DIR} ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 llvm_map_components_to_libnames(LLVM_LIBS
+
     # windowsmanifest
     # xray
     # libdriver
@@ -53,8 +56,10 @@ llvm_map_components_to_libnames(LLVM_LIBS
     # x86disassembler
     # x86asmparser
     x86codegen
+
     # x86desc
     x86info
+
     # webassemblydisassembler
     # webassemblyasmparser
     # webassemblycodegen
@@ -122,9 +127,11 @@ llvm_map_components_to_libnames(LLVM_LIBS
     # armdisassembler
     # armasmparser
     armcodegen
+
     # armdesc
     # armutils
     arminfo
+
     # amdgputargetmca
     # amdgpudisassembler
     # amdgpuasmparser
@@ -135,9 +142,11 @@ llvm_map_components_to_libnames(LLVM_LIBS
     # aarch64disassembler
     # aarch64asmparser
     aarch64codegen
+
     # aarch64desc
     # aarch64utils
     aarch64info
+
     # orcjit
     # mcjit
     # jitlink
@@ -172,9 +181,11 @@ llvm_map_components_to_libnames(LLVM_LIBS
     # globalisel
     # mirparser
     asmprinter
+
     # debuginfomsf
     # selectiondag
     codegen
+
     # irreader
     # asmparser
     # interfacestub
@@ -193,14 +204,17 @@ llvm_map_components_to_libnames(LLVM_LIBS
     # textapi
     # mcparser
     mc
+
     # debuginfocodeview
     # bitreader
     core
+
     # remarks
     # bitstreamreader
     # binaryformat
     # tablegen
     support
+
     # demangle
 )
 
