--- a/.github/workflows/clangformat.yml
+++ b/.github/workflows/clangformat.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   formatting-check:
-    name: Formatting Check
+    name: check format
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
