--- a/nic/CMakeLists.txt
+++ b/nic/CMakeLists.txt
@@ -204,3 +204,27 @@ llvm_map_components_to_libnames(LLVM_LIBS
 add_executable(nic ${SRC} ${BISON_parser_OUTPUTS} ${FLEX_scanner_OUTPUTS})
 
 target_link_libraries(nic ${LLVM_LIBS})
+
+include(CTest)
+enable_testing()
+
+file(GLOB_RECURSE TEST_SRC
+    CONFIGURE_DEPENDS
+    "test/*.ni"
+    "test/**/*.ni"
+)
+
+add_executable(
+    nic_test
+    test/test.c
+)
+
+FOREACH(test ${TEST_SRC})
+    GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
+    GET_FILENAME_COMPONENT(TPath ${test} DIRECTORY)
+    ADD_TEST(NAME ${TName} COMMAND nic_test "$<TARGET_FILE:nic>" "${TPath}/${TName}.ni" WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/test")
+ENDFOREACH(test)
+
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
