--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,15 @@
 cmake_minimum_required(VERSION 3.2.0)
 project(ni VERSION 0.0.1 LANGUAGES CXX C)
 
+include(CTest)
+enable_testing()
+
 add_subdirectory(ni)
 add_subdirectory(nic)
+
+set(CPACK_PROJECT_NAME ${PROJECT_NAME})
+set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
+include(CPack)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 add_custom_target(
