--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -28,19 +28,12 @@ collaborators:
 branches:
   - name: main
     protection:
-      required_pull_request_reviews:
-        required_approving_review_count: 0
-        dismiss_stale_reviews: false
-        require_code_owner_reviews: false
-        dismissal_restrictions: {}
+      required_pull_request_reviews: null
       required_status_checks:
         strict: true
         contexts:
-          - ubuntu
-          - mac
+          - lint
+          - format
       enforce_admins: true
       required_linear_history: true
-      restrictions:
-        apps: []
-        users: []
-        teams: []
+      restrictions: null
