--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,10 @@ jobs:
       - name: Install dependencies
         run: |
           brew update
-          brew install bison flex llvm
-          echo "/usr/local/opt/llvm/bin" >> $GITHUB_PATH
-          echo "/usr/local/opt/flex/bin" >> $GITHUB_PATH
-          echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
+          brew install bison flex llvm@14
+          echo "$(brew --prefix llvm@14)/bin" >> $GITHUB_PATH
+          echo "$(brew --prefix flex)/bin" >> $GITHUB_PATH
+          echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
       - name: Build
         run: |
           mkdir build
