--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -31,9 +31,9 @@ branches:
       required_pull_request_reviews: null
       required_status_checks:
         strict: true
-        contexts:
-          - lint
-          - format
+        contexts: [ "lint", "check format" ]
       enforce_admins: true
-      required_linear_history: true
+      required_linear_history: false
+      allow_force_pushes: false
+      allow_deletions: false
       restrictions: null
