--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,14 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install build-essential flex bison cmake -y
-          sudo wget https://apt.llvm.org/llvm.sh
-          sudo chmod +x llvm.sh
-          sudo ./llvm.sh 15 all
-          sudo rm llvm.sh
+      - name: Install LLVM
+        run: |
+          curl -O https://apt.llvm.org/llvm.sh
+          cat llvm.sh | sed 's|apt-get install -y $PKG|apt-get install -o Dpkg::Options::="--force-overwrite" -y $PKG|' > llvm2.sh
+          mv llvm2.sh llvm.sh
+          chmod +x llvm.sh
+          sudo bash ./llvm.sh 15 all
+          rm llvm.sh
       - name: Build
         run: |
           mkdir build
