--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,8 @@ jobs:
       - name: Install LLVM
         run: |
           curl -O https://apt.llvm.org/llvm.sh
-          cat llvm.sh | sed 's|apt-get install -y $PKG|apt-get install -o Dpkg::Options::="--force-overwrite" -y $PKG|' > llvm2.sh
-          mv llvm2.sh llvm.sh
           chmod +x llvm.sh
-          sudo bash ./llvm.sh 15 all
+          sudo bash ./llvm.sh 21 all
           rm llvm.sh
       - name: Build
         run: |
@@ -41,8 +39,8 @@ jobs:
       - name: Install dependencies
         run: |
           brew update
-          brew install bison flex llvm@15
-          echo "$(brew --prefix llvm@15)/bin" >> $GITHUB_PATH
+          brew install bison flex llvm
+          echo "$(brew --prefix llvm)/bin" >> $GITHUB_PATH
           echo "$(brew --prefix flex)/bin" >> $GITHUB_PATH
           echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
       - name: Build
