--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -45,14 +45,12 @@ jobs:
       - name: Generate coverage info
         run: |
           cd build
-          lcov --directory . --capture --output-file coverage.info --ignore-errors gcov,source,unused
-          lcov --remove coverage.info '*/test/*' '*/_deps/*' '*/scanner.c' '*/parser.tab.c' '*/src/scanner.l' '*/src/parser.y' --output-file coverage.info.cleaned --ignore-errors unused
-          lcov --list coverage.info.cleaned
-          
+          make coverage
+
       - name: Upload to Coveralls
         uses: coverallsapp/github-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: build/coverage.info.cleaned
+          path-to-lcov: build/lcov.info
           flag-name: ubuntu-coverage
           parallel: false
