--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,182 +62,37 @@ set(CHA_SOURCES
 include_directories(include src ${CMAKE_CURRENT_BINARY_DIR} ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 llvm_map_components_to_libnames(LLVM_LIBS
+    # Core components
+    core
+    support
+    mc
+    codegen
+    asmprinter
 
-    # windowsmanifest
-    # xray
-    # libdriver
-    # dlltooldriver
-    # coverage
-    # lineeditor
-    # xcoredisassembler
-    # xcorecodegen
-    # xcoredesc
-    # xcoreinfo
-    # x86targetmca
-    # x86disassembler
-    # x86asmparser
+    # X86 target (for Linux builds)
     x86codegen
-
-    # x86desc
     x86info
     x86asmparser
 
-    # webassemblydisassembler
-    # webassemblyasmparser
-    # webassemblycodegen
-    # webassemblydesc
-    # webassemblyutils
-    # webassemblyinfo
-    # vedisassembler
-    # veasmparser
-    # vecodegen
-    # vedesc
-    # veinfo
-    # systemzdisassembler
-    # systemzasmparser
-    # systemzcodegen
-    # systemzdesc
-    # systemzinfo
-    # sparcdisassembler
-    # sparcasmparser
-    # sparccodegen
-    # sparcdesc
-    # sparcinfo
-    # riscvdisassembler
-    # riscvasmparser
-    # riscvcodegen
-    # riscvdesc
-    # riscvinfo
-    # powerpcdisassembler
-    # powerpcasmparser
-    # powerpccodegen
-    # powerpcdesc
-    # powerpcinfo
-    # nvptxcodegen
-    # nvptxdesc
-    # nvptxinfo
-    # msp430disassembler
-    # msp430asmparser
-    # msp430codegen
-    # msp430desc
-    # msp430info
-    # mipsdisassembler
-    # mipsasmparser
-    # mipscodegen
-    # mipsdesc
-    # mipsinfo
-    # lanaidisassembler
-    # lanaicodegen
-    # lanaiasmparser
-    # lanaidesc
-    # lanaiinfo
-    # hexagondisassembler
-    # hexagoncodegen
-    # hexagonasmparser
-    # hexagondesc
-    # hexagoninfo
-    # bpfdisassembler
-    # bpfasmparser
-    # bpfcodegen
-    # bpfdesc
-    # bpfinfo
-    # avrdisassembler
-    # avrasmparser
-    # avrcodegen
-    # avrdesc
-    # avrinfo
-    # armdisassembler
-    # armasmparser
+    # ARM target (for ARM-based systems)
     armcodegen
-
-    # armdesc
-    # armutils
     arminfo
+    armasmparser
 
-    # amdgputargetmca
-    # amdgpudisassembler
-    # amdgpuasmparser
-    # amdgpucodegen
-    # amdgpudesc
-    # amdgpuutils
-    # amdgpuinfo
-    # aarch64disassembler
-    # aarch64asmparser
+    # AArch64 target (for ARM64/Apple Silicon)
     aarch64codegen
-
-    # aarch64desc
-    # aarch64utils
     aarch64info
+    aarch64asmparser
 
-    # orcjit
-    # mcjit
-    # jitlink
-    # interpreter
-    # executionengine
-    # runtimedyld
-    # orctargetprocess
-    # orcshared
-    # dwp
-    # symbolize
-    # debuginfopdb
-    # debuginfogsym
-    # option
-    # objectyaml
-    # mca
-    # mcdisassembler
-    # lto
-    # cfguard
-    # frontendopenacc
-    # extensions
-    # Polly
-    # PollyISL
-    # passes
-    # objcarcopts
-    # coroutines
-    # ipo
-    # instrumentation
-    # vectorize
-    # linker
-    # frontendopenmp
-    # dwarflinker
-    # globalisel
-    # mirparser
-    asmprinter
-
-    # debuginfomsf
-    # selectiondag
-    codegen
-
-    # irreader
-    # asmparser
-    # interfacestub
-    # filecheck
-    # fuzzmutate
-    # target
-    # scalaropts
-    # instcombine
-    # aggressiveinstcombine
-    # transformutils
-    # bitwriter
-    # analysis
-    # profiledata
-    # debuginfodwarf
-    # object
-    # textapi
-    # mcparser
-    mc
-
-    # debuginfocodeview
-    # bitreader
-    core
-
-    # remarks
-    # bitstreamreader
-    # binaryformat
-    # tablegen
-    support
-
-    # demangle
+    # Additional components needed for code generation
+    target
+    analysis
+    transformutils
+    scalaropts
+    instcombine
+    vectorize
+    bitwriter
+    mcparser
 )
 
 add_executable(cha ${CHA_SOURCES})
