--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.5.0)
 project(cha VERSION 0.0.1 LANGUAGES CXX C)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_definitions(-DCMAKE_PROJECT_NAME="${CMAKE_PROJECT_NAME}" -DCMAKE_PROJECT_VERSION="${CMAKE_PROJECT_VERSION}")
 
 include(CTest)
@@ -27,214 +30,143 @@ if(ENABLE_COVERAGE)
     endif()
 endif()
 
+# Setup FLEX and BISON first
+flex_target(scanner src/scanner.l "${CMAKE_CURRENT_BINARY_DIR}/scanner.c")
+bison_target(parser src/parser.y "${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp" DEFINES_FILE "${CMAKE_CURRENT_BINARY_DIR}/parser.tab.hpp")
+add_flex_bison_dependency(scanner parser)
+
 file(GLOB_RECURSE SRC
     CONFIGURE_DEPENDS
-    "src/*.c"
-    "src/*.h"
-    "src/**/*.c"
-    "src/**/*.h"
+    "src/*.cpp"
+    "src/*.hpp"
+    "src/**/*.cpp"
+    "src/**/*.hpp"
     "include/*.h"
+    "include/*.hpp"
     "include/**/*.h"
+    "include/**/*.hpp"
 )
 
-flex_target(scanner src/scanner.l "${CMAKE_CURRENT_BINARY_DIR}/scanner.c")
-bison_target(parser src/parser.y "${CMAKE_CURRENT_BINARY_DIR}/parser.tab.c")
-add_flex_bison_dependency(scanner parser)
+# Add specific C++ files we want to include (now that BISON/FLEX outputs are defined)
+set(CHA_SOURCES
+    src/ast.cpp
+    src/validate.cpp
+    src/log.cpp
+    src/codegen.cpp
+    src/cha.cpp
+    src/main.cpp
+    ${BISON_parser_OUTPUTS}
+    ${FLEX_scanner_OUTPUTS}
+)
 
 include_directories(include src ${CMAKE_CURRENT_BINARY_DIR} ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 llvm_map_components_to_libnames(LLVM_LIBS
-
-    # windowsmanifest
-    # xray
-    # libdriver
-    # dlltooldriver
-    # coverage
-    # lineeditor
-    # xcoredisassembler
-    # xcorecodegen
-    # xcoredesc
-    # xcoreinfo
-    # x86targetmca
-    # x86disassembler
-    # x86asmparser
-    x86codegen
-
-    # x86desc
-    x86info
-
-    # webassemblydisassembler
-    # webassemblyasmparser
-    # webassemblycodegen
-    # webassemblydesc
-    # webassemblyutils
-    # webassemblyinfo
-    # vedisassembler
-    # veasmparser
-    # vecodegen
-    # vedesc
-    # veinfo
-    # systemzdisassembler
-    # systemzasmparser
-    # systemzcodegen
-    # systemzdesc
-    # systemzinfo
-    # sparcdisassembler
-    # sparcasmparser
-    # sparccodegen
-    # sparcdesc
-    # sparcinfo
-    # riscvdisassembler
-    # riscvasmparser
-    # riscvcodegen
-    # riscvdesc
-    # riscvinfo
-    # powerpcdisassembler
-    # powerpcasmparser
-    # powerpccodegen
-    # powerpcdesc
-    # powerpcinfo
-    # nvptxcodegen
-    # nvptxdesc
-    # nvptxinfo
-    # msp430disassembler
-    # msp430asmparser
-    # msp430codegen
-    # msp430desc
-    # msp430info
-    # mipsdisassembler
-    # mipsasmparser
-    # mipscodegen
-    # mipsdesc
-    # mipsinfo
-    # lanaidisassembler
-    # lanaicodegen
-    # lanaiasmparser
-    # lanaidesc
-    # lanaiinfo
-    # hexagondisassembler
-    # hexagoncodegen
-    # hexagonasmparser
-    # hexagondesc
-    # hexagoninfo
-    # bpfdisassembler
-    # bpfasmparser
-    # bpfcodegen
-    # bpfdesc
-    # bpfinfo
-    # avrdisassembler
-    # avrasmparser
-    # avrcodegen
-    # avrdesc
-    # avrinfo
-    # armdisassembler
-    # armasmparser
-    armcodegen
-
-    # armdesc
-    # armutils
-    arminfo
-
-    # amdgputargetmca
-    # amdgpudisassembler
-    # amdgpuasmparser
-    # amdgpucodegen
-    # amdgpudesc
-    # amdgpuutils
-    # amdgpuinfo
-    # aarch64disassembler
-    # aarch64asmparser
-    aarch64codegen
-
-    # aarch64desc
-    # aarch64utils
-    aarch64info
-
-    # orcjit
-    # mcjit
-    # jitlink
-    # interpreter
-    # executionengine
-    # runtimedyld
-    # orctargetprocess
-    # orcshared
-    # dwp
-    # symbolize
-    # debuginfopdb
-    # debuginfogsym
-    # option
-    # objectyaml
-    # mca
-    # mcdisassembler
-    # lto
-    # cfguard
-    # frontendopenacc
-    # extensions
-    # Polly
-    # PollyISL
-    # passes
-    # objcarcopts
-    # coroutines
-    # ipo
-    # instrumentation
-    # vectorize
-    # linker
-    # frontendopenmp
-    # dwarflinker
-    # globalisel
-    # mirparser
+    # Core components
+    core
+    support
+    mc
+    codegen
     asmprinter
 
-    # debuginfomsf
-    # selectiondag
-    codegen
+    # X86 target (for Linux builds)
+    x86codegen
+    x86info
+    x86asmparser
 
-    # irreader
-    # asmparser
-    # interfacestub
-    # filecheck
-    # fuzzmutate
-    # target
-    # scalaropts
-    # instcombine
-    # aggressiveinstcombine
-    # transformutils
-    # bitwriter
-    # analysis
-    # profiledata
-    # debuginfodwarf
-    # object
-    # textapi
-    # mcparser
-    mc
+    # ARM target (for ARM-based systems)
+    armcodegen
+    arminfo
+    armasmparser
 
-    # debuginfocodeview
-    # bitreader
-    core
+    # AArch64 target (for ARM64/Apple Silicon)
+    aarch64codegen
+    aarch64info
+    aarch64asmparser
 
-    # remarks
-    # bitstreamreader
-    # binaryformat
-    # tablegen
-    support
-
-    # demangle
+    # Additional components needed for code generation
+    target
+    analysis
+    transformutils
+    scalaropts
+    instcombine
+    vectorize
+    bitwriter
+    mcparser
 )
 
-add_executable(cha ${SRC} ${BISON_parser_OUTPUTS} ${FLEX_scanner_OUTPUTS})
+add_executable(cha ${CHA_SOURCES})
 
 target_link_libraries(cha ${LLVM_LIBS})
 
 file(GLOB_RECURSE TEST_SRC
     CONFIGURE_DEPENDS
-    "test/*.cha"
-    "test/**/*.cha"
+    "test/integration/*.cha"
+    "test/integration/**/*.cha"
 )
 
 add_executable(
     cha_test
-    test/test.c
+    test/integration/test.c
 )
+
+# Add C++ AST unit tests
+add_executable(
+    ast_test
+    test/unit/test_ast.cpp
+    src/ast.cpp
+)
+
+# Set C++ standard for the test
+set_target_properties(ast_test PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+)
+
+# Add the C++ AST test to CTest
+add_test(NAME ast_unit_tests COMMAND ast_test)
+
+# Add C++ Parser unit tests
+add_executable(
+    parser_test
+    test/unit/test_parser.cpp
+    src/ast.cpp
+    src/log.cpp
+    ${BISON_parser_OUTPUTS}
+    ${FLEX_scanner_OUTPUTS}
+)
+
+# Set C++ standard and link dependencies for parser test
+set_target_properties(parser_test PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+)
+
+target_link_libraries(parser_test ${LLVM_LIBS})
+
+# Add the C++ Parser test to CTest
+add_test(NAME parser_unit_tests COMMAND parser_test)
+set_tests_properties(parser_unit_tests PROPERTIES
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+)
+
+# Add C++ Validation unit tests
+add_executable(
+    validate_test
+    test/unit/test_validate.cpp
+    src/ast.cpp
+    src/validate.cpp
+    src/log.cpp
+)
+
+# Set C++ standard for the validation test
+set_target_properties(validate_test PROPERTIES
+    CXX_STANDARD 17
+    CXX_STANDARD_REQUIRED ON
+)
+
+# Add the C++ Validation test to CTest
+add_test(NAME validate_unit_tests COMMAND validate_test)
 
 FOREACH(test ${TEST_SRC})
     GET_FILENAME_COMPONENT(TName ${test} NAME_WE)
@@ -276,9 +208,13 @@ find_program(CLANG_FORMAT_EXECUTABLE
 if(CLANG_FORMAT_EXECUTABLE)
     file(GLOB_RECURSE ALL_SOURCE_FILES
         "${CMAKE_SOURCE_DIR}/src/*.c"
+        "${CMAKE_SOURCE_DIR}/src/*.cpp"
         "${CMAKE_SOURCE_DIR}/src/*.h"
+        "${CMAKE_SOURCE_DIR}/src/*.hpp"
         "${CMAKE_SOURCE_DIR}/include/*.h"
+        "${CMAKE_SOURCE_DIR}/include/*.hpp"
         "${CMAKE_SOURCE_DIR}/include/**/*.h"
+        "${CMAKE_SOURCE_DIR}/include/**/*.hpp"
     )
     
     add_custom_target(format
